# laiguanjia-skill

./: .gitignore  LICENSE  README.md  SKILL.md  mcp-spec.md  pyproject.toml  qa-report.md  requirements.txt  server.py  賴管家 - FAQ.md  賴管家 - 其他資訊.md  賴管家 - 活動模組.md  賴管家 - 費用.md  賴管家 - 預約.md
data/: contacts.json  faq.json  feature-routes.json  plans-suitability-rules.json  pricing.json
docs/: index.html  manual-toc.md
docs/case-studies/: 01-stylist-xiaoshuai.md  02-fitness-amanda.md  03-manicure-xiaoling.md  04-petgrooming-xiaomei.md  05-clinic-xiaohui.md  06-driver-xiaochen.md  README.md
docs/snippets/: README.md  footer-snippet.html
docs/whitepaper/: 01-mcp-architecture.en.md  01-mcp-architecture.md  02-data-layer-separation.en.md  02-data-layer-separation.md  03-consent-gate-pattern.en.md  03-consent-gate-pattern.md  04-dual-layer-validation.en.md  04-dual-layer-validation.md  README.en.md  README.md
tests/: test_day3_handlers.py  test_day4_handlers.py
